--- a/BilgeKafe.UI/BilgeKafe.UI.csproj
+++ b/BilgeKafe.UI/BilgeKafe.UI.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="SiparisForm.resx">
       <DependentUpon>SiparisForm.cs</DependentUpon>
@@ -105,6 +106,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dolu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bos.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BilgeKafe.Data\BilgeKafe.Data.csproj">
+      <Project>{fb488235-7efe-4f88-b2a7-6d882d2eecb0}</Project>
+      <Name>BilgeKafe.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
